# jlo

./: .gitignore  .mock-mock-run-21723673603  .mock-mock-run-21742132939  .mock-mock-run-21744459421  .mock-mock-run-21745298013  .mock-mock-run-21800071297  .mock-mock-run-21800165802  .mock-mock-run-21910469453  .mock-mock-run-21910878666  .mock-mock-run-21911271404  .mock-mock-run-21911480202  .mock-mock-run-21911811812  .mock-mock-run-21912092859  .mock-mock-run-21912279881  .mock-mock-run-21912458275  .mock-mock-run-21912612533  .mock-mock-run-21913042727  .mock-mock-run-21949817867  .mock-mock-run-21951493850  .mock-mock-run-21952404052  .mock-mock-run-21953006535  .mock-mock-run-21953473697  .mock-run-21703198282  .mock-run-21703272543  .mock-run-21704211523  .mock-run-21710133170  .mock-run-21974863657  .mock-run-21978181663  .mock-run-21979718061  .mock-run-21980504342  .mock-run-21987050765  .mock-run-22009024586  .mock-run-22015827241  .mock-run-22035628349  .mock-run-22035742168  .mock-run-22036054414  .mock-run-22036238233  .mock-run-22036427635  .mock-run-22045201229  .mock-run-22102635159  (+25 more)
.github/: AGENTS.md  README.md  REPRODUCTION_GUIDE.md
.jlo/: .jlo-managed.yml  config.toml  scheduled.toml
.jules/: .jlo-managed.yml  JULES.md  README.md  config.toml  dummy_implementer.txt  perspective.yml
.mx/: border.md  flow.md  info.md  premise.md  review.md  revised_tasks.md  sample.md  tasks.md
coverage/: cobertura.xml
docs/: AGENTS.md  ARCHITECTURE_BOUNDARY.md  CONTROL_PLANE_OWNERSHIP.md  INNOVATOR_ROLE_YML_GUIDE.md  OBSERVER_ROLE_YML_GUIDE.md  PROMPT_ASSEMBLY.md  README.md  REPRODUCTION_GUIDE.md  SKILLS_FRAMEWORK.md  WORKFLOW_BRANCH_IMPACT_MAP.md  WORKFLOW_LAYER_CHANGE_MAP.md  decider.md  implementer.md  narrator.md  planner.md
notes/: state.md
src/: AGENTS.md  api.rs  bundle.rs  config.rs  error.rs  generator.rs  layers.rs  lib.rs  main.rs  scaffold.rs  storage.rs  templates.rs  workspace.rs
src/app/: AGENTS.md  (+4 more)
tests/: AGENTS.md  api_coverage.rs  bootstrap.rs  cli_commands.rs  cli_flow.rs  commands_api.rs  commands_core.rs  doctor.rs  library.rs  library_coverage.rs  mock.rs  mock_mode.rs  mock_output_validation.rs  security.rs  workflow.rs  workflow_kit.rs  workflow_scaffold.rs
tools/: refactor_errors.py
(+3791 files in other folders)
