[package]
name = "jlo"
version = "1.0.0"
edition = "2024"
description = "Manage .jules/ workspace scaffolding for organizational memory"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
dialoguer = "0.11"
include_dir = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.1"
tempfile = "3.10"
