[package]
name = "jlo"
version = "7.4.0"
edition = "2024"
description = "CLI tool for deploying `.jules/` workspace scaffolding and orchestrating scheduled LLM agent execution."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
dialoguer = "0.11"
include_dir = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
url = { version = "2.5.8", features = ["serde"] }
minijinja = "2"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
mockito = "1.4"
predicates = "3.1"
serial_test = "3.1"
tempfile = "3.10"
proptest = "1.4"
